[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "swingmusic"
description = "Swing Music"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "pillow>=11.1.0",
    "Flask>=3.1.0",
    "Flask-Cors>=3.0.10",
    "requests>=2.27.1",
    "colorgram.py>=1.2.0",
    "tqdm>=4.65.0",
    "tinytag>=2.1.1",
    "Unidecode>=1.3.6",
    "psutil>=5.9.4",
    "show-in-file-manager>=1.1.4",
    "flask-compress>=1.13",
    "tabulate>=0.9.0",
    "setproctitle>=1.3.2",
    "locust>=2.20.1",
    "watchdog>=4.0.0",
    "flask-jwt-extended>=4.6.0",
    "sqlalchemy>=2.0.31",
    "memory-profiler>=0.61.0",
    "sortedcontainers>=2.4.0",
    "xxhash>=3.4.1",
    "ffmpeg-python>=0.2.0",
    "schedule>=1.2.2",
    "pillow>=11.1.0",
    "flask-openapi3==3.0.2",
    "rapidfuzz==3.11.0",
    "pendulum>=3.0.0",
    "pystray>=0.19.5",
    "cryptography>=46.0.1",
    "waitress>=3.0.2; sys_platform == 'win32'",
    "waitress>=3.0.2",
    "granian>=2.5.5",
    "asgiref>=3.10.0",
    "natsort>=8.4.0",
    "blurhash-python>=1.2.2",
    "nuitka>=4.0.8",
]

[project.optional-dependencies]
build = [
    "pyinstaller",
    "nuitka>=4.0.8",
]

[tool.uv]
dependency-metadata = [
    { name = "waitress", version = "3.0.2", requires-dist = [], requires-python = ">=3.11" },
    { name = "bjoern", version="3.2.2", requires-dist = [], requires-python = ">=3.11"}
]

[project.scripts]
swingmusic = "swingmusic.__main__:run"


[project.urls]
Homepage = "https://swingmx.com/"
Repository = "https://github.com/swingmx/swingmusic"
Documentation = "https://swingmx.com/guide/introduction.html"
Issues = "https://github.com/swingmx/swingmusic/issues"


# Include compiled Nuitka extension modules (.so on Linux/macOS, .pyd on
# Windows) in the wheel. These replace the .py source files after the
# compile-premium-modules.sh step runs in CI.
[tool.setuptools.package-data]
"swingmusic.premium" = ["*.so", "*.pyd"]
"swingmusic.premium.recipes" = ["*.so", "*.pyd"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
fallback_version = "v0.0.0"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

# cibuildwheel produces per-platform wheels containing the Nuitka-compiled
# premium modules. Each wheel is platform-tagged (manylinux for Linux,
# macosx for macOS) so `pip install swingmusic` picks the right one and
# premium logic ships as compiled .so rather than plain Python source.
[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = "*-musllinux_*"
archs = ["auto64"]
before-build = "pip install nuitka>=4.0.8 && bash scripts/compile-premium-modules.sh"
# Verify each built wheel actually ships working premium modules. Runs in
# a fresh venv with only the wheel installed, so it catches missing-source
# bugs (the cause of v2.1.5 silently shipping a broken wheel) at build
# time instead of at install time.
test-command = "python {project}/scripts/test-premium-imports.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
# macOS arm64 runners only (Apple Silicon). Intel macOS support is dropped.
archs = ["arm64"]
