[tool.poetry]
name = "Alice Server"
version = "0.1.0"
description = ""
authors = ["geoffrey45 <geoffreymungai45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
mutagen = "^1.45.1"
pymongo = "^4.0.1"
requests = "^2.27.1"
watchdog = "^2.1.6"
progress = "^1.6"
gunicorn = "^20.1.0"
Pillow = "^9.0.1"
Flask-Caching = "^1.11.1"
"colorgram.py" = "^1.2.0"
tqdm = "^4.64.0"
rapidfuzz = "^2.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
